# dualmind

./: .clang-format  .gitignore  pyproject.toml
dualmind/: __init__.py  types.py
dualmind/agent/: __init__.py
dualmind/ingress/: __init__.py  audio.py  base.py
dualmind/workers/: __init__.py  base.py  stt.py
proto/: buf.yaml  chunk.proto  envelope.proto  scene.proto  services.proto  transcript.proto
