[build-system]
requires      = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "dualmind"
version     = "0.1.0"
description = "Real-time distributed multimodal intelligence runtime"
requires-python = ">=3.13"

dependencies = [
    # Audio capture
    "sounddevice>=0.5",

    # STT
    "faster-whisper>=1.1",

    # Vision
    "opencv-python>=4.10",

    # LLM + agentic reasoning
    "anthropic>=0.40",
    "httpx>=0.27",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",

    # Protobuf + gRPC (Python stubs only, C runtime owns the real calls)
    "grpcio>=1.68",
    "protobuf>=5.29",

    # Numerics
    "numpy>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
include = ["dualmind*"]

[tool.ruff]
target-version = "py313"
line-length    = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.mypy]
python_version         = "3.13"
strict                 = true
ignore_missing_imports = true
